Restructure ModelingExerciseFeedbackService