@@ -19,9 +19,12 @@ import de.tum.cit.aet.artemis.assessment.domain.Result;
 import de.tum.cit.aet.artemis.assessment.repository.ResultRepository;
 import de.tum.cit.aet.artemis.assessment.service.ResultService;
 import de.tum.cit.aet.artemis.assessment.web.ResultWebsocketService;
+import de.tum.cit.aet.artemis.athena.dto.ModelingFeedbackDTO;
 import de.tum.cit.aet.artemis.athena.service.AthenaFeedbackSuggestionsService;
 import de.tum.cit.aet.artemis.core.exception.BadRequestAlertException;
 import de.tum.cit.aet.artemis.core.exception.InternalServerErrorException;
+import de.tum.cit.aet.artemis.core.exception.NetworkingException;
+import de.tum.cit.aet.artemis.exercise.domain.Submission;
 import de.tum.cit.aet.artemis.exercise.domain.participation.StudentParticipation;
 import de.tum.cit.aet.artemis.exercise.service.ParticipationService;
 import de.tum.cit.aet.artemis.exercise.service.SubmissionService;
@@ -60,9 +63,7 @@ public class ModelingExerciseFeedbackService {
 
         List<Result> athenaResults = participation.getResults().stream().filter(result -> result.getAssessmentType() == AssessmentType.AUTOMATIC_ATHENA).toList();
 
-        long countOfAthenaResults = athenaResults.size();
-
-        if (countOfAthenaResults >= 10) {
+        if (athenaResults.size() >= 10) {
             throw new BadRequestAlertException("Maximum number of AI feedback requests reached.", "participation", "preconditions not met");
         }
     }
@@ -71,12 +72,11 @@ public class ModelingExerciseFeedbackService {
      * Handles the request for generating feedback for a modeling exercise.
      * Unlike programming exercises a tutor is not notified if Athena is not available.
      *
-     * @param exerciseId       the id of the modeling exercise.
      * @param participation    the student participation associated with the exercise.
      * @param modelingExercise the modeling exercise object.
      * @return StudentParticipation updated modeling exercise for an AI assessment
      */
-    public StudentParticipation handleNonGradedFeedbackRequest(Long exerciseId, StudentParticipation participation, ModelingExercise modelingExercise) {
+    public StudentParticipation handleNonGradedFeedbackRequest(StudentParticipation participation, ModelingExercise modelingExercise) {
         if (this.athenaFeedbackSuggestionsService.isPresent()) {
             this.checkRateLimitOrThrow(participation);
             CompletableFuture.runAsync(() -> this.generateAutomaticNonGradedFeedback(participation, modelingExercise));
@@ -95,46 +95,28 @@ public class ModelingExerciseFeedbackService {
         log.debug("Using athena to generate (modeling exercise) feedback request: {}", modelingExercise.getId());
 
         // athena takes over the control here
-        var submissionOptional = participationService.findExerciseParticipationWithLatestSubmissionAndResultElseThrow(participation.getId()).findLatestSubmission();
+        Optional<Submission> submissionOptional = participationService.findExerciseParticipationWithLatestSubmissionAndResultElseThrow(participation.getId())
+                .findLatestSubmission();
 
         if (submissionOptional.isEmpty()) {
             throw new BadRequestAlertException("No legal submissions found", "submission", "noSubmission");
         }
-        var submission = submissionOptional.get();
 
-        Result automaticResult = new Result();
-        automaticResult.setAssessmentType(AssessmentType.AUTOMATIC_ATHENA);
-        automaticResult.setRated(true);
-        automaticResult.setScore(0.0);
-        automaticResult.setSuccessful(null);
-        automaticResult.setSubmission(submission);
-        automaticResult.setParticipation(participation);
+        Submission submission = submissionOptional.get();
+
+        Result automaticResult = createInitialResult(participation, submission);
+
         try {
             this.resultWebsocketService.broadcastNewResult(participation, automaticResult);
 
             log.debug("Submission id: {}", submission.getId());
 
-            var athenaResponse = this.athenaFeedbackSuggestionsService.orElseThrow().getModelingFeedbackSuggestions(modelingExercise, (ModelingSubmission) submission, false);
+            List<Feedback> feedbacks = getAthenaFeedback(modelingExercise, (ModelingSubmission) submission);
 
-            List<Feedback> feedbacks = athenaResponse.stream().filter(individualFeedbackItem -> individualFeedbackItem.description() != null).map(individualFeedbackItem -> {
-                var feedback = new Feedback();
-                feedback.setText(individualFeedbackItem.title());
-                feedback.setDetailText(individualFeedbackItem.description());
-                feedback.setHasLongFeedbackText(false);
-                feedback.setType(FeedbackType.AUTOMATIC);
-                feedback.setCredits(individualFeedbackItem.credits());
-                return feedback;
-            }).toList();
+            double totalFeedbackScore = calculateTotalFeedbackScore(feedbacks, modelingExercise);
 
-            double totalFeedbacksScore = 0.0;
-            for (Feedback feedback : feedbacks) {
-                totalFeedbacksScore += feedback.getCredits();
-            }
-            totalFeedbacksScore = totalFeedbacksScore / modelingExercise.getMaxPoints() * 100;
-            automaticResult.setSuccessful(true);
             automaticResult.setCompletionDate(ZonedDateTime.now());
-
-            automaticResult.setScore(Math.clamp(totalFeedbacksScore, 0, 100));
+            automaticResult.setScore(Math.max(0, Math.min(totalFeedbackScore, 100)));
             automaticResult.setSuccessful(true);
 
             automaticResult = this.resultRepository.save(automaticResult);
@@ -146,5 +128,70 @@ public class ModelingExerciseFeedbackService {
             log.error("Could not generate feedback for exercise ID: {} and participation ID: {}", modelingExercise.getId(), participation.getId(), e);
             throw new InternalServerErrorException("Something went wrong... AI Feedback could not be generated");
         }
+    }
+
+    /**
+     * Creates an initial Result object for the automatic feedback.
+     *
+     * @param participation the student participation
+     * @param submission    the submission to which the result is associated
+     * @return the initial Result object
+     */
+    private Result createInitialResult(StudentParticipation participation, Submission submission) {
+        Result result = new Result();
+        result.setAssessmentType(AssessmentType.AUTOMATIC_ATHENA);
+        result.setRated(true);
+        result.setScore(0.0);
+        result.setSuccessful(null);
+        result.setSubmission(submission);
+        result.setParticipation(participation);
+        return result;
+    }
+
+    /**
+     * Retrieves feedback from the Athena service.
+     *
+     * @param modelingExercise the modeling exercise
+     * @param submission       the modeling submission
+     * @return a list of Feedback objects
+     * @throws NetworkingException if there's a problem communicating with Athena
+     */
+    private List<Feedback> getAthenaFeedback(ModelingExercise modelingExercise, ModelingSubmission submission) throws NetworkingException {
+        return this.athenaFeedbackSuggestionsService.orElseThrow().getModelingFeedbackSuggestions(modelingExercise, submission, false).stream()
+                .filter(feedbackItem -> feedbackItem.description() != null).map(this::convertToFeedback).toList();
+    }
+
+    /**
+     * Converts an Athena feedback suggestion to a Feedback object.
+     *
+     * @param feedbackItem the Athena feedback suggestion
+     * @return the Feedback object
+     */
+    private Feedback convertToFeedback(ModelingFeedbackDTO feedbackItem) {
+        Feedback feedback = new Feedback();
+        feedback.setText(feedbackItem.title());
+        feedback.setDetailText(feedbackItem.description());
+        feedback.setHasLongFeedbackText(false);
+        feedback.setType(FeedbackType.AUTOMATIC);
+        feedback.setCredits(feedbackItem.credits());
+        return feedback;
+    }
+
+    /**
+     * Calculates the total feedback score based on the list of feedbacks and the exercise's max points.
+     *
+     * @param feedbacks        the list of feedbacks
+     * @param modelingExercise the modeling exercise
+     * @return the total feedback score
+     */
+    private double calculateTotalFeedbackScore(List<Feedback> feedbacks, ModelingExercise modelingExercise) {
+        double totalCredits = feedbacks.stream().mapToDouble(Feedback::getCredits).sum();
+        Double maxPoints = modelingExercise.getMaxPoints();
+
+        if (maxPoints == null || maxPoints == 0) {
+            throw new IllegalArgumentException("Maximum points must be greater than zero.");
+        }
+
+        return (totalCredits / maxPoints) * 100;
     }
 }
